# tftp

./: .astylerc  .gitignore  CMakeLists.txt  README.md  config.h  config.h.in
common/: common.h  file.c  file.h  malloc3d.c  malloc3d.h  messages.h
modernize/: CMakeLists.txt
modernize/include/modernize/: main.h
modernize/src/: main.c
src/: argparse.c  argparse.h  error_handling.h  main.c  messages.h  tftp.c  tftp.h
tftp/: CMakeLists.txt
tftp/include/: error_handling.h  main.h  messages.h
tftp/src/: main.c
tftp_commands/: CMakeLists.txt
tftp_commands/include/tftp_commands/: file.h  malloc3d.h  tftp.h  tftp_cmdtbl.h  tftp_connect.h  tftp_get.h  tftp_help.h  tftp_helper.h  tftp_mode.h  tftp_put.h  tftp_quit.h  tftp_sock_init.h  tftp_status.h  validator.h
tftp_commands/src/: file.c  malloc3d.c  tftp_connect.c  tftp_get.c  tftp_help.c  tftp_helper.c  tftp_mode.c  tftp_put.c  tftp_quit.c  tftp_sock_init.c  tftp_status.c  validator.c
tftpd/: CMakeLists.txt
tftpd/include/: main.h  xvalidator.h
tftpd/src/: main.c
tftpd_commands/: CMakeLists.txt
tftpd_commands/include/tftpd_commands/: parse_address.h  shared_objects.h  tftp_handle_nak.h  tftp_handle_rrq.h  tftp_handle_wrq.h  tftp_hdr.h  tftp_listener.h  tftp_sock_init.h  validator.h
tftpd_commands/src/: parse_address.c  tftp_handle_nak.c  tftp_handle_rrq.c  tftp_handle_wrq.c  tftp_listener.c  tftp_sock_init.c  validator.c
